# Learn-OpenGL

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
resources/: config.json
resources/shaders/: lightShader.fs  lightSourceShader.fs  shader.fs  shader.vs
src/: camera.hpp  config.cpp  glad.c  image.cpp  main.cpp  program.hpp  shader.hpp
